added main blocks

--- a/app/index.html
+++ b/app/index.html
@@ -66,6 +66,138 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12">
+					<div class="hero-title">
+						Уверенное движение вперёд
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="grid">
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-12">
+					<div class="grid-title">
+						Новости
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-12 col-lg-9">
+					<div class="grid-item grid-item-1" style="background-image: url(img/img1.jpg)">
+						<div>
+							<div class="date">
+								<i class="fa fa-clock-o"></i> 30 июня 2017
+							</div>
+							<div class="title">
+								<a href="">Работы по укладке нового слоя асфальта на участке автодороги Улан-Удэ — Гусинозерск</a>
+							</div>
+							<div class="text">
+								27 июня в местности села Оронгой продолжились работы по укладке нового асфальтового покрытия. Компания подрядчик ИП Аганян А.Р. в лице главного мастера сообщили о конце всех работ в середине августа...
+							</div>
+							<div class="link">
+								<a href="">Подробнее</a>
+							</div>
+							<div class="views">
+								<span>20</span> <i class="fa fa-eye"></i>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-xs-12 col-lg-3">
+					<div class="grid-item grid-item-2">
+						<div>
+							<div class="date">
+								<i class="fa fa-clock-o"></i> 30 июня 2017
+							</div>
+							<div class="title">
+								<a href="">Успешно сдан в эуксплотацию новый мост в Баунтовском районе</a>
+							</div>
+							<div class="link">
+								<a href="">Подробнее</a>
+							</div>
+							<div class="views">
+								<span>20</span> <i class="fa fa-eye"></i>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-xs-12 col-lg-5">
+					<div class="grid-item grid-item-3" style="background-image: url(img/img2.jpg)">
+						<div>
+							<div class="date">
+								<i class="fa fa-clock-o"></i> 30 июня 2017
+							</div>
+							<div class="title">
+								<a href="">Успешно сдан в эуксплотацию новый мост в Баунтовском районе</a>
+							</div>
+							<div class="link">
+								<a href="">Подробнее</a>
+							</div>
+							<div class="views">
+								<span>20</span> <i class="fa fa-eye"></i>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-xs-12 col-lg-4">
+					<div class="grid-item grid-item-4" style="background-image: url(img/img3.jpg)">
+						<div>
+							<div class="date">
+								<i class="fa fa-clock-o"></i> 30 июня 2017
+							</div>
+							<div class="title">
+								<a href="">Очередной скандал с дорожниками и мэрией Улан-Удэ</a>
+							</div>
+							<div class="ico">
+								<i class="fa fa-youtube-play"></i>
+							</div>
+							<div class="link">
+								<a href="">Подробнее</a>
+							</div>
+							<div class="views">
+								<span>20</span> <i class="fa fa-eye"></i>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-xs-12 col-lg-3">
+					<div class="grid-item grid-item-5" style="background-image: url(img/img4.jpg)">
+						<div>
+							<div class="date">
+								<i class="fa fa-clock-o"></i> 30 июня 2017
+							</div>
+							<div class="title">
+								<a href="">Новая дорожная разметка на ул. Бабушкина г. Улан-Удэ</a>
+							</div>
+							<div class="ico">
+								<i class="fa fa-youtube-play"></i>
+							</div>
+							<div class="link">
+								<a href="">Подробнее</a>
+							</div>
+							<div class="views">
+								<span>20</span> <i class="fa fa-eye"></i>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-xs-12">
+					<div class="grid-etc">
+						<a href="">Все новости</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="banner">
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-12">
 					
 				</div>
 			</div>
