--- a/app/news.html
+++ b/app/news.html
@@ -28,7 +28,7 @@
 
 </head>
 
-<body>
+<body class="not-home">
 	<div class="top">
 		<div class="container">
 			<div class="row">
@@ -112,12 +112,12 @@
 		</div>
 	</div>
 
-	<div class="hero">
+	<div class="newsBlock wrap">
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12">
-					<div class="hero-title">
-						Уверенное движение вперёд
+					<div class="bigTitle newsBlock-title">
+						Новости
 					</div>
 				</div>
 			</div>
@@ -129,7 +129,7 @@
 			<div class="">
 				<div class="col-xs-12">
 					<div class="grid-title">
-						Новости
+						Последнее
 					</div>
 				</div>
 			</div>
@@ -227,9 +227,6 @@
 							<div class="title">
 								<a href="">Новая дорожная разметка на ул. Бабушкина г. Улан-Удэ</a>
 							</div>
-							<div class="ico">
-								<i class="fa fa-youtube-play"></i>
-							</div>
 							<div class="link">
 								<a href="">Подробнее</a>
 							</div>
@@ -249,114 +246,139 @@
 		</div>
 	</div>
 
-	<div class="banner">
-		<div class="container">
-			<div class="row">
-				<div class="col-xs-12">
-					<a href=""><img src="img/banner1.jpg" class="img-responsive" alt=""></a>
-				</div>
-			</div>
-		</div>
-	</div>
-
 	<div class="grid">
 		<div class="container">
 			<div class="">
 				<div class="col-xs-12">
 					<div class="grid-title">
-						Фотогалерея
+						Все
 					</div>
 				</div>
 			</div>
 
 			<div class="">
-				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-					<div class="grid-item grid-item-6" style="background-image: url(img/img5.jpg)">
+				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
+					<div class="grid-item grid-item-2col">
 						<div>
-							<div class="title">
-								<a href="">#ЛучшаяТехника на наших дорогах</a>
+							<div class="col-xs-12 col-md-5 col-lg-6">
+								<div class="img" style="background-image: url(img/sq1.png)"></div>	
 							</div>
-							<div class="text">
-								Все о современных технологиях используемых в дорожном строительстве
-							</div>
-							<div class="link">
-								<a href="">Подробнее</a>
-							</div>
-							<div class="views">
-								<span>20</span> <i class="fa fa-eye"></i>
+							<div class="col-xs-12 col-md-7 col-lg-6">
+								<div class="date">
+									<i class="fa fa-clock-o"></i> 30 июня 2017
+								</div>
+								<div class="title">
+									<a href="">Как правильно устанавливать знаки при дорожных работах</a>
+								</div>
+								<div class="text">
+									Наш фотокорреспондент проехал по стройкам Бурятии, что он там увидел?
+								</div>
+								<div class="link">
+									<a href="">Подробнее</a>
+								</div>
+								<div class="views">
+									<span>20</span> <i class="fa fa-eye"></i>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-					<div class="grid-item grid-item-6" style="background-image: url(img/img6.jpg)">
+				<div class="col-xs-12 col-sm-6 col-md-12 col-lg-6">
+					<div class="grid-item grid-item-2col">
 						<div>
-							<div class="title">
-								<a href="">#ДорожныеТехнологии</a>
+							<div class="col-xs-12 col-md-5 col-lg-6">
+								<div class="img" style="background-image: url(img/sq1.png)"></div>	
 							</div>
-							<div class="text">
-								Все о современных технологиях используемых в дорожном строительстве
-							</div>
-							<div class="link">
-								<a href="">Подробнее</a>
-							</div>
-							<div class="views">
-								<span>20</span> <i class="fa fa-eye"></i>
+							<div class="col-xs-12 col-md-7 col-lg-6">
+								<div class="date">
+									<i class="fa fa-clock-o"></i> 30 июня 2017
+								</div>
+								<div class="title">
+									<a href="">Как правильно устанавливать знаки при дорожных работах</a>
+								</div>
+								<div class="text">
+									Наш фотокорреспондент проехал по стройкам Бурятии, что он там увидел?
+								</div>
+								<div class="link">
+									<a href="">Подробнее</a>
+								</div>
+								<div class="views">
+									<span>20</span> <i class="fa fa-eye"></i>
+								</div>
+								<div class="clearfix"></div>
 							</div>
 						</div>
 					</div>
 				</div>
-
-				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-5">
-					<div class="grid-item grid-item-7" style="background-image: url(img/img7.jpg)">
+				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
+					<div class="grid-item grid-item-2col">
 						<div>
-							<div class="title">
-								<a href="">Успешно сдан в эуксплотацию новый мост в Баунтовском районе</a>
+							<div class="col-xs-12 col-md-5 col-lg-6">
+								<div class="img" style="background-image: url(img/sq1.png)"></div>	
 							</div>
-							<div class="link">
-								<a href="">Подробнее</a>
-							</div>
-							<div class="views">
-								<span>20</span> <i class="fa fa-eye"></i>
+							<div class="col-xs-12 col-md-7 col-lg-6">
+								<div class="date">
+									<i class="fa fa-clock-o"></i> 30 июня 2017
+								</div>
+								<div class="title">
+									<a href="">Как правильно устанавливать знаки при дорожных работах</a>
+								</div>
+								<div class="text">
+									Наш фотокорреспондент проехал по стройкам Бурятии, что он там увидел?
+								</div>
+								<div class="link">
+									<a href="">Подробнее</a>
+								</div>
+								<div class="views">
+									<span>20</span> <i class="fa fa-eye"></i>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
-					<div class="grid-item grid-item-7" style="background-image: url(img/img8.jpg)">
+				<div class="col-xs-12 col-sm-6 col-md-12 col-lg-6">
+					<div class="grid-item grid-item-2col">
 						<div>
-							<div class="title">
-								<a href="">Очередной скандал с дорожниками и мэрией Улан-Удэ</a>
+							<div class="col-xs-12 col-md-5 col-lg-6">
+								<div class="img" style="background-image: url(img/sq1.png)"></div>	
 							</div>
-							<div class="link">
-								<a href="">Подробнее</a>
-							</div>
-							<div class="views">
-								<span>20</span> <i class="fa fa-eye"></i>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-xs-12 col-md-4 col-lg-3">
-					<div class="grid-item grid-item-7" style="background-image: url(img/img9.jpg)">
-						<div>
-							<div class="title">
-								<a href="">Новая дорожная разметка на ул. Бабушкина г. Улан-Удэ</a>
-							</div>
-							<div class="link">
-								<a href="">Подробнее</a>
-							</div>
-							<div class="views">
-								<span>20</span> <i class="fa fa-eye"></i>
+							<div class="col-xs-12 col-md-7 col-lg-6">
+								<div class="date">
+									<i class="fa fa-clock-o"></i> 30 июня 2017
+								</div>
+								<div class="title">
+									<a href="">Как правильно устанавливать знаки при дорожных работах</a>
+								</div>
+								<div class="text">
+									Наш фотокорреспондент проехал по стройкам Бурятии, что он там увидел?
+								</div>
+								<div class="link">
+									<a href="">Подробнее</a>
+								</div>
+								<div class="views">
+									<span>20</span> <i class="fa fa-eye"></i>
+								</div>
+								<div class="clearfix"></div>
 							</div>
 						</div>
 					</div>
 				</div>
 
 				<div class="col-xs-12">
-					<div class="grid-etc">
-						<a href="">Все альбомы</a>
+					<div class="grid-more">
+						<a href="">Загрузить еще</a>
+						<br><br>
 					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="banner">
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-12">
+					<a href=""><img src="img/banner1.jpg" class="img-responsive" alt=""></a>
 				</div>
 			</div>
 		</div>
